--- a/src/404.html
+++ b/src/404.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Page Not Found</title>
+  <title>Card Fork - Page Not Found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     * {
@@ -12,12 +12,12 @@
     }
 
     html {
-      color: #888;
       display: table;
       font-family: sans-serif;
       height: 100%;
       text-align: center;
       width: 100%;
+	  background-color: #FFB500;
     }
 
     body {
@@ -27,7 +27,6 @@
     }
 
     h1 {
-      color: #555;
       font-size: 2em;
       font-weight: 400;
     }
@@ -55,6 +54,7 @@
 
 <body>
   <h1>Page Not Found</h1>
+  <br>
   <p>Sorry, but the page you were trying to view does not exist.</p>
 </body>
 
